Fixed issues with System Master Page

--- a/Themes/GCWU/MasterPages/Resource Files/WET.resx
+++ b/Themes/GCWU/MasterPages/Resource Files/WET.resx
@@ -214,7 +214,7 @@
     <value>Site Footer</value>
   </data>
   <data name="SiteTitleText" xml:space="preserve">
-    <value>Web Experience Toolkit - Sharepoint Variant</value>
+    <value>Web Experience Toolkit - SharePoint Variant</value>
   </data>
   <data name="SkipLinkMain" xml:space="preserve">
     <value>Skip to main content</value>
